--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "local-web-server": "^1.2.6",
     "lodash": "^4.17.4",
     "node-pre-gyp": "^0.6.39",
+    "particles.js": "^2.0.0",
     "postcss-cssnext": "^2.11.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^1.2.1",
